fixed some scrollbar issues

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-
+  overflow: hidden;
   height: 100%;
   width: 100%;
 }
