--- a/src/routes/About/About.scss
+++ b/src/routes/About/About.scss
@@ -1,8 +1,8 @@
 
 .about {
-  height: 100vh;
+  height: 99vh;
   overflow-y: auto;
-  width: 100vw;
+  width: 99vw;
 
   .about-container {
     display: flex;
